View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024158 | Open CASCADE | OCCT:Visualization | public | 2013-09-10 14:24 | 2013-12-19 13:57 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | high | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024158: OpenGl_AspectMarker - debug assert on destruction of Alpha texture shared between multiple RGB texture | ||||
Description | Alpha (hi-lighting) sprite texture might be shared between different RGB sprites, which cause to broken resource sharing. Also marker resources should be destructed in the similar way as textured fonts. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Patch is ready fore review in CR24158 branch. |
|
Branch CR24158 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR24158 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: a6d9b6e454fe8a5358fb8ea07c7261bb5e720a31 Number of compiler warnings: occt component : Linux: 783 (787 on master) Windows: 392 (392 on master) products component : Linux: 190 (190 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365837376 / 364606948 Total CPU difference: 41746.48000000097 / 45375.34000000108 Testing on Windows: Total MEMORY difference: 421489588 / 422150252 Total CPU difference: 42962.53125 / 47093.53125 There are not differences in images found by testdiff. |
occt: master 18e85574 2013-09-10 11:32:53 Committer: bugmaster Details Diff |
0024158: OpenGl_AspectMarker - debug assert on destruction of Alpha texture shared between multiple RGB texture In addition - delay marker resources destruction in the similar way as textured fonts |
Affected Issues 0024158 |
|
mod - src/OpenGl/OpenGl_AspectMarker.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-09-10 14:24 | kgv | New Issue | |
2013-09-10 14:24 | kgv | Assigned To | => kgv |
2013-09-10 14:25 | kgv | Relationship added | related to 0024131 |
2013-09-10 15:15 | kgv | Priority | low => high |
2013-09-10 15:15 | kgv | Severity | trivial => minor |
2013-09-10 15:15 | kgv | Reproducibility | N/A => always |
2013-09-10 15:15 | kgv | Status | new => assigned |
2013-09-10 15:15 | kgv | Summary | OpenGl_AspectMarker - delay marker resource destruction => OpenGl_AspectMarker - debug assert on destruction of Alpha texture shared between multiple RGB texture |
2013-09-10 15:15 | kgv | Description Updated | |
2013-09-10 15:34 | kgv | Note Added: 0025513 | |
2013-09-10 15:34 | kgv | Assigned To | kgv => san |
2013-09-10 15:34 | kgv | Status | assigned => resolved |
2013-09-11 11:25 |
|
Note Added: 0025526 | |
2013-09-11 11:25 |
|
Assigned To | san => bugmaster |
2013-09-11 11:25 |
|
Status | resolved => reviewed |
2013-09-11 11:35 |
|
Test case number | => Not needed |
2013-09-11 11:35 |
|
Assigned To | bugmaster => mkv |
2013-09-11 15:40 |
|
Note Added: 0025533 | |
2013-09-11 15:40 |
|
Assigned To | mkv => bugmaster |
2013-09-11 15:40 |
|
Status | reviewed => tested |
2013-09-16 10:47 | bugmaster | Changeset attached | => occt master 18e85574 |
2013-09-16 10:47 | bugmaster | Status | tested => verified |
2013-09-16 10:47 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |