0024158: OpenGl_AspectMarker - debug assert on destruction of Alpha texture shared between multiple RGB texture

In addition - delay marker resources destruction in the similar way as textured fonts